# government-feed

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  settings.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6708804885d7_baseline_sources_and_news_items_tables.py  7d725c48738d_add_catalog_fields_and_subscriptions_.py  b4497266cbef_add_health_monitoring_fields_to_sources.py
backend/src/api/: dependencies.py  main.py  schemas.py  state.py
backend/src/api/routes/: admin.py  ai.py  cache.py  catalog.py  news.py  scheduler.py  settings.py  sources.py
backend/src/core/: __init__.py  entities.py
backend/src/core/repositories/: __init__.py  news_repository.py  source_repository.py  subscription_repository.py
backend/src/infrastructure/: __init__.py  ai_service.py  cache.py  content_scraper.py  database.py  feed_discovery.py  feed_parser.py  health_monitor.py  models.py  resilience.py  scheduler.py  settings_store.py  unit_of_work.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_admin.py  test_api_catalog.py  test_api_endpoints.py  test_api_health_monitor.py  test_api_remaining.py
backend/tests/unit/: test_ai_service.py  test_cache.py  test_content_scraper.py  test_entities.py  test_feed_discovery.py  test_feed_parser.py  test_health_monitor.py  test_news_repository.py  test_resilience.py  test_scheduler.py  test_schemas.py  test_settings_store.py  test_source_repository.py  test_subscription_repository.py  test_unit_of_work.py  test_xxe_protection.py
(+189 files in other folders)
